# embree-raytracer

./: CMakeLists.txt  README.md
cmake/: NoInSourceBuilds.cmake
ext/: CMakeLists.txt
ext/embree-concise/: CHANGELOG.md  CMakeLists.txt
ext/embree-concise/common/lexers/: tokenstream.h
ext/embree-concise/include/embree3/: rtcore_scene.h
ext/embree-concise/kernels/builders/: bvh_builder_hair.h  bvh_builder_morton.h  bvh_builder_msmblur.h  bvh_builder_msmblur_hair.h  bvh_builder_sah.h
ext/embree-concise/kernels/bvh/: bvh_collider.cpp
ext/embree-concise/kernels/common/: builder.h  rtcore_builder.cpp  scene.cpp
ext/glew/doc/: advanced.html  basic.html  build.html  credits.html  glew.html  glxew.html  index.html  install.html  log.html  wglew.html
ext/indicators/: indicators.hpp
include/: ert.h
include/core/: color.h  hit_record.h  sampler.h  spectrum.h  texture.h  utility.h  vec3.h
include/geom/: aarect.h  fast_obj.h  geometry.h  poly_mesh.h  sphere.h
include/rend/: bxdf.h  camera.h  integrator.h  material.h  photon_mapping.h  renderer.h  scene.h  shader.h  viewer.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  color.cpp  sampler.cpp  texture.cpp
src/geom/: CMakeLists.txt  aarect.cpp  fast_obj.c  poly_mesh.cpp  sphere.cpp
src/rend/: CMakeLists.txt  camera.cpp  renderer.cpp  scene.cpp  viewer.cpp
